<package format="2">
  <name>plugin_tutorials</name>
  <version>1.0.0</version>
  <description>Learn how to create plugins in gazebo.</description>

  <maintainer email="wuchu9402@163.com">Chu Wu</maintainer>

  <author>Chu Wu</author>
  <author>Bruce</author>

  <license>ASL 2.0</license>

  <url type="website">https://zhuanlan.zhihu.com/p/363385163</url>
  <url type="website">https://zhuanlan.zhihu.com/p/363539171</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
